# pynotion

./: .gitignore  README.md  pyproject.toml
pynotion/: config.py
pynotion/models/: __init__.py  _internal.py  types.py
tests/models/: model_test_utils.py  test_internal.py  test_types.py
