[project]
name = "pynotion"
version = "0.1.0"
description = "A Python-based Notion API integration using Pydantic."
authors = [
    { name = "Hayes", email = "92khsang@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = ["notion", "pydantic", "httpx", "api", "integration"]

dependencies = [
    "httpx >= 0.23.0,<1.0.0",
    "pydantic >= 2.10.0,<3.0.0",
    "pydantic-settings >= 2.8.0,<3.0.0",
]

[project.urls]
Repository = "https://github.com/92khsang/pynotion"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = { version = ">=25.1.0,<26.0.0", extras = ["d"] }

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=2.1.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
